Extension is renamed

--- a/src/popup.html
+++ b/src/popup.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GrowthX</title>
+    <title>NameInserter</title>
     <link rel="stylesheet" href="styles/popup.css">
   </head>
   <body>
   <main>
-    <h1>GrowthX <img src="./img/growth_x_logo_huge_no_padding.png" alt="logo"></h1>
-      <p>GrowthX is a free, open-source Chrome Extension that instantly adds the first name of a person you are replying to.</p>
-      <a href="https://growthx.unicornplatform.page/" target="_blank">Learn more</a>
+    <h1>NameInserter <img src="img/nameInserter_logo_huge_no_padding.png" alt="logo"></h1>
+      <p>NameInserter is a free, open-source Chrome Extension that instantly adds the first name of a person you are replying to.</p>
+      <a href="https://name-inserter.unicornplatform.page" target="_blank">Learn more</a>
   </main>
   </body>
 </html>
